mise à jour et ajout d'endPoint
